[project]
name = "solarsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "astropy>=7.1.0",
    "marimo>=0.13.15",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "ruff>=0.11.13",
    "skyfield>=1.53",
]
